[gd_scene load_steps=11 format=3 uid="uid://8biqi748t7l3"]

[ext_resource type="Script" path="res://prototype/MobPrototype.gd" id="1_l6laj"]
[ext_resource type="Texture2D" uid="uid://ccxfxgjrfijci" path="res://prototype/art/enemyWalking_1.png" id="2_j7aqc"]
[ext_resource type="Texture2D" uid="uid://dc7tgc46lafu8" path="res://prototype/art/enemyWalking_2.png" id="3_5t723"]
[ext_resource type="Script" path="res://prototype/scenes/Damageable.gd" id="4_yfjhx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w8ta0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j7aqc")
}, {
"duration": 1.0,
"texture": ExtResource("3_5t723")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p3s8m"]
radius = 48.0
height = 130.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rechp"]
radius = 45.0
height = 102.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_blc4p"]
radius = 49.0
height = 126.0

[sub_resource type="Animation" id="Animation_nn7tu"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fmrua"]
_data = {
"hit": SubResource("Animation_nn7tu")
}

[node name="PrototypeMob" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_l6laj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w8ta0")
animation = &"walk"
frame_progress = 0.579603

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p3s8m")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(2, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(7, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rechp")

[node name="Damageable" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("4_yfjhx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damageable"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_blc4p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fmrua")
}

[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="area_exited" from="DamageArea" to="." method="_on_damage_area_area_exited"]
[connection signal="on_damage" from="Damageable" to="." method="_on_damageable_on_damage"]
